# transsys

./: BUGS  Makefile.am  configure.in  maintainer_start
branches/jtk/: Makefile.am
branches/jtk/doc/: tr_ex02.tra  tr_ex04.tra  tr_ex05full.tra  trl_ex04full.trl  trl_ex06full.trl  trl_ex07.trl
branches/jtk/src/: Makefile.am  cellcone.c  express.c  ltransgl.c  ltransps.c  ltrcheck.c  transscatter.c  transsys.h  trlex.l
branches/jtk/toolbox/: get_overlap  regstruct_transsys  transdisrupt.py  transrnd.py  transsys.py
cbouyio/: Makefile  analyseLattice.sh  conductWholeExperiment.sh  generateTranssysProgramFromRegulonDB  latticeSimulator  network_simulator  patternFormation.stat  patternFormation.tra  patternFormationConstitutive.tra  patternFormation_zeroDiffusion.stat  setup.py  translattice.py  translattice.r  tunningTranssys  zeroTranssysDiffusibility
cbouyio/attractors/: engineered.tra  engineeredAnalysis.r
cbouyio/html/: frames.html  help.html  toc-translattice-module.html  translattice-pysrc.html  translattice.ConstantRNG-class.html  translattice.TranssysProgramLattice-class.html
cbouyio/lattice/: latticeExperiments.sh  statisticalExperiments.sh
cbouyio/lattice/optimisation/: randomLocalSearch.py
cbouyio/lattice/tests/: diffusionOut.expect  diffusionTest.tra  naiveOut.expect  randomSeedTest.tra  sFactorTest.tra  zeroTest.tra
cbouyio/optimisation/: bimodalities.py
cbouyio/scripts/: alterTranssysDiffusibility  regulonDBtoTranssysProgram  tpGenerator  tunningTranssys
cbouyio/simulatorScripts/: produceExamples.sh
cbouyio/tests/: decay.out.expect  decaytest.tra  inter.out.expect  intertest.tra  latticeTesting.sh  sizetestTMP.out  testingLattice  timestep.out.expect  timesteptest.tra  timesteptestTMP.out
cbouyio/tools-scripts/attractors/: stablePointAnalysis.r
cbouyio/tools-scripts/simulatorScripts/: simulationAnalysis.R
cbouyio/translattice/: translattice.py
cbouyio/transsysLattice/: Makefile  latticeExperiments.sh  latticeSimulator  patternFormation.tra  patternFormation2Pattractors.tra  patternFormationConstitutive.tra  setup.py  statisticalExperiments.sh  translattice.py  translattice.r
cbouyio/transsysLattice/optimisation/: analyseOptimisation.R  bimodalities.py  optimisationTests  randomLocalSearch.py  runOptimiser
cbouyio/transsysLattice/tests/: decayOut.expect  diffusibilityOut.expect  diffusionOut.expect  initialisationTest.tra  naiveTest.tra  optimisationTesting  sFactorOut.expect  sTimestepOut.expect  testingLattice  zeroOut.expect
cbouyio/transsysNetworks/: networkSimulator
cbouyio/transsysOptimisation/: bimodalities.py  optimisationTests  randomLocalSearch.py  randomWalkOptimisation.py
cbouyio/transsysSimulator/: produceExamples.sh  transsysSimulator
cbouyio/transsys_simulators/: produce_examples_01.sh  transsys_simulator
doc/: transsys_report.gpc
python/: Makefile.am  optim.py  setup.py  test_transsys  trsystool
python/scripts/: Makefile.am  lsysoptim  test_scripts  transopt  transopt_sa  transopt_sa_test.tra  transopt_test_grad.txt  transopt_test_obj.txt  transopt_test_sa.txt
python/src/: clib.c
python/tests/: check.tra  modcheck
python/transsys/: __init__.py  optim.py  utils.py
src/: Makefile.am  cell.c  cellcone.c  dot.c  express.c  lsys.c  ltransexpr.c  ltransgl.c  ltrcheck.c  mem.c  parse.c  pscript.c  save.c  transcheck.c  transexpr.c  translib.c  transps.c  transscatter.c  transsys.h  trbison.y  trtypes.h
src/tests/: Makefile.am
tags/ecal2005_submit/: Makefile.am  README
tags/ecal2005_submit/doc/: Makefile.am  tr_ex03.tra  tr_ex03c.tra  transsys_report.tex  trl_ex02.trl  trl_ex09.trl
tags/ecal2005_submit/src/: express.c  ltransgl.c  ltransps.c  mem.c  transexpr.c  trlex.l  urandom.c
tags/ecal2005_submit/toolbox/: Makefile.am  euclidean_testdata  parsetest  random_transsys_lsys  regstruct_transarray  transdisrupt_test  transsys_test  ttest
tags/gwal2006/: BUGS  INSTALL  configure.in
tags/gwal2006/antiques/: Cluster_transarray_03.r
tags/gwal2006/cbouyio/: generateTranssysProgramFromRegulonDB  network_simulator
tags/gwal2006/doc/: tr_ex00.tra  tr_ex04full.tra  tr_ex05.tra  tr_ex06full.tra  (+5 more)
tags/ueastart/: AUTHORS  COPYING
toolbox/: Makefile.am  get_overlap  lsysko  mutant_transsys  random_transsys  random_transsys_lsys  readcluster  tdecodetest  test_transparse  transdecode.py  transdisrupt.py  transoptim.py  transsys.py  transsys_test
toolbox/transarr/: NAMESPACE
toolbox/transsys/: DESCRIPTION  NAMESPACE
toolbox/transsys/R/: readTranssysProgram.R  zzz.R
toolbox/transsys/man/: getAllFactors.Rd  transsys-package.Rd  transsysExpression.Rd  transsysProfiles.Rd  transsysScatter.Rd
trunk/: BUGS  Makefile.am  configure.in  maintainer_start
trunk/cbouyio/: Makefile  alterTranssysDiffusibility  analyseLattice.sh  conductWholeExperiment.sh  generateTranssysProgramFromRegulonDB  latticeSimulator  network_simulator  patternFormation.out  patternFormation.tra  patternFormation_zeroDiffusion.out  patternFormation_zeroDiffusion.tra  setup.py  translattice.py  translattice.r  tunningTranssys
trunk/doc/: tr_ex03.plt  transsys_report.tex  trl_ex03.trl  trl_ex06.trl  trl_ex08.trl  trl_ex09full.trl
trunk/python/: Makefile.am  setup.py  test_transsys  trsys2sbml  trsystool
trunk/python/scripts/: Makefile.am  lsysoptim  lsysoptim_test.tra  lsysoptim_test.trl  lsysoptim_test_optspec.txt  test_scripts  transopt  transopt_sa  transopt_sa_test_saspec.txt  transopt_test_grad.txt
trunk/python/src/: Makefile.am  clib.c
trunk/python/tests/: arabidopsis.trl  modcheck
trunk/python/transsys/: Makefile.am  __init__.py  optim.py  utils.py
trunk/src/: Makefile.am  dot.c  entropy.c  expr.c  express.c  lsys.c  ltransexpr.c  ltransgl.c  ltrcheck.c  mem.c  parse.c  save.c  transdot.c  transexpr.c  translib.c  transsys.h  trbison.y  trlex.l  trtypes.h
trunk/testdata/: Makefile.am  check.tra  defglo.trl
trunk/toolbox/: Makefile.am  euclidean_testdata  gamma_sweep  mutant_transsys  random_transsys  random_transsys_lsys  test_transparse  transdecode.py  transdisrupt.py  transoptim.py  transsys.py
(+126 files in other folders)
