# Copyright (C) 2001 Jan T. Kim <kim@inb.mu-luebeck.de>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# $Id$
# $Revision$
# $Author$
# $Date$

# $Log$
# Revision 1.2  2005/03/29 17:32:39  jtk
# introduced arrayed lsys string, with symbol distance matrix.
#
# Revision 1.1.1.1  2005/03/08 17:12:01  jtk
# new cvs after loss at INB
#
# Revision 1.4  2003/01/28 21:12:25  kim
# initial toolbox assembly
#
# Revision 1.3  2002/01/25 03:36:57  kim
# minor stuff (?)
#
# Revision 1.1  2001/04/04 11:11:42  kim
# Initial addition of files previously not CVS managed
#

ACLOCAL_AMFLAGS = -I m4

AM_CFLAGS = -Wall -pedantic

EXTRA_DIST = BUGS toolbox/transsys testdata

SUBDIRS = src doc toolbox python

