# $Id$
# $Revision$
# $Author$
# $Date$

# DISTCLEANFILES = 

# FIXME? not entirely clear that transopt should be an EXTRA_DIST item
#     is not really a useful script outside testing, so keeping it this
#     way for now.

EXTRA_DIST = test_scripts transopt transopt_test.tra transopt_test_grad.txt transopt_test_sa.txt transopt_test_obj.txt

TESTS		= test_scripts

